--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>booking_hotel</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="src/assets/img/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Riorelax - Luxury Hotel</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+
+  <script src="src/assets/js/vendor/modernizr-3.5.0.min.js"></script>
+  <script src="src/assets/js/vendor/jquery-3.6.0.min.js"></script>
+  <script src="src/assets/js/popper.min.js"></script>
+  <script src="src/assets/js/bootstrap.min.js"></script>
+  <script src="src/assets/js/slick.min.js"></script>
+  <script src="src/assets/js/ajax-form.js"></script>
+  <script src="src/assets/js/paroller.js"></script>
+  <script src="src/assets/js/wow.min.js"></script>
+  <script src="src/assets/js/js_isotope.pkgd.min.js"></script>
+  <script src="src/assets/js/imagesloaded.min.js"></script>
+  <script src="src/assets/js/parallax.min.js"></script>
+  <script src="src/assets/js/jquery.waypoints.min.js"></script>
+  <script src="src/assets/js/jquery.counterup.min.js"></script>
+  <script src="src/assets/js/jquery.scrollUp.min.js"></script>
+  <script src="src/assets/js/jquery.meanmenu.min.js"></script>
+  <script src="src/assets/js/parallax-scroll.js"></script>
+  <script src="src/assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="src/assets/js/element-in-view.js"></script>
+  <script src="src/assets/js/main.js"></script>
+</body>
+
 </html>
